--- a/Python_Code/Linear_Regression.ipynb
+++ b/Python_Code/Linear_Regression.ipynb
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "721dba53",
+   "id": "f3517573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "28fca096",
+   "id": "5e082121",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ee31effa",
+   "id": "8e6ba63a",
    "metadata": {},
    "outputs": [
     {
@@ -364,14 +364,14 @@
     "bike_X = bike_X.loc[:, bike_X.columns!='catv']\n",
     "bike_Y = bucpd[['grav']]\n",
     "\n",
-    "bike_reg = LinearRegression().fit(X, Y)\n",
+    "bike_reg = LinearRegression().fit(bike_X, biY)\n",
     "bike_reg.coef_"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a70fd58b",
+   "id": "d36d9ad8",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24617281",
+   "id": "afa63fa6",
    "metadata": {},
    "outputs": [],
    "source": []
