--- a/Python_Code/Plottest_severity_by_year_stacked_plots.ipynb
+++ b/Python_Code/Plottest_severity_by_year_stacked_plots.ipynb
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e78f4f73",
+   "id": "d9d8ed7e",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
    "source": [
     "fig,axes = plt.subplots(nrows=1, ncols=2)\n",
     "\n",
-    "res.plot(kind='bar', stacked=True, xlabel='year', ax=axes[0], ylim=[0, 210000])\n",
+    "res.plot(kind='bar', stacked=True, xlabel='year', ylabel='Accident participants', ax=axes[0], ylim=[0, 210000])\n",
     "bike_res.plot(kind='bar', stacked=True, xlabel='year', ax=axes[1], ylim=[0, 7500])\n",
     "plt.savefig('..//Plots//Accidents_per_year_and_severity.pdf', format='pdf')\n",
     "plt.show()"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dcab7acd",
+   "id": "cb9d60ff",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "res.plot(kind='bar', stacked=True, xlabel='year', ylim=[0, 210000])\n",
+    "res.plot(kind='bar', stacked=True, xlabel='year', ylabel='Biking accident participants' ylim=[0, 210000])\n",
     "plt.savefig('..//Plots//Accidents_per_year_and_severity_all.pdf', format='pdf')\n",
     "plt.show()"
    ]
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "16885843",
+   "id": "dfd19d5a",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d97ad2",
+   "id": "fba5b5c5",
    "metadata": {},
    "outputs": [],
    "source": []
