--- a/Python_Code/Plottest_severity_by_year_stacked_plots.ipynb
+++ b/Python_Code/Plottest_severity_by_year_stacked_plots.ipynb
@@ -20,9 +20,7 @@
     "data_caracteristics = load_caracteristics_csv()\n",
     "\n",
     "#print(data_users.head())\n",
-    "#print(data_users[['Num_Acc', 'grav']].head())\n",
-    "\n",
-    "\n"
+    "#print(data_users[['Num_Acc', 'grav']].head())\n"
    ]
   },
   {
@@ -214,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "75977c43",
+   "id": "e3afc407",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "11c32e7a",
+   "id": "96ea57c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "006ae27e",
+   "id": "f2434e1d",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd6195c",
+   "id": "6d978572",
    "metadata": {},
    "outputs": [],
    "source": []
