Added Latex code

--- a/Latex_Template/Project_Template.tex
+++ b/Latex_Template/Project_Template.tex
@@ -27,7 +27,7 @@
 \usepackage{microtype}      % microtypography
 \usepackage{xcolor}         % colors
 
-\title{Predicting Acceptance Probabilities\\ from Trivial Features}
+\title{Analyzing Accident Statistics from France \\ between 2005 and 2016}
 
 % The \author macro works with any number of authors. There are two commands
 % used to separate the names and addresses of multiple authors: \And and \AND.
@@ -38,13 +38,13 @@
 % \AND instead of \And before the third author name.
 
 \author{%
-  Philipp Hennig\\
-  Matrikelnummer 123456789\\
-  \texttt{philipp.hennig@uni-tuebingen.de} \\
+  Jonathan Reitemann\\
+  Matrikelnummer 5729177\\
+  \texttt{jonathan.reitemann@student.uni-tuebingen.de} \\
   \And
-  Jakob Macke\\
-  Matrikelnummer 987654321\\
-  \texttt{dummymail@uni-tuebingen.de} \\
+  Hannes Klein\\
+  Matrikelnummer 5490178\\
+  \texttt{hannes.klein@student.uni-tuebingen.de} \\
 }
 
 \begin{document}
@@ -52,9 +52,7 @@
 \maketitle
 
 \begin{abstract}
-  \emph{[Use this abstract to briefly explain what you are planning to do. Here is an example:]} We are planning to use the collection of \href{https://openreview-py.readthedocs.io/en/latest/getting_data.html}{all papers ever \emph{submitted} to the ICLR conference} to see how well paper acceptance can be predicted from trivial features, such as the paper's overall length, number of words or number of figures. We are planning to use logistic regression for this purpose.
+  We are planning to use the datasets of \href{https://www.kaggle.com/ahmedlahlou/accidents-in-france-from-2005-to-2016?select=caracteristics.csv}{Accidents in France from 2005 to 2016} to find out how to prevent accidents efficiently. For example which road improvements reduce accidents the most or how much bike lanes reduce accidents with cyclists.
 \end{abstract}
-
-You can find a detailed example and instructions on how to use this style file in the attached \texttt{neurip\_2021.tex} file. This includes instructions for how to lay out citations.
 
 \end{document}
