Added code bit to display absolute number of highway accidents

--- a/Python_Code/Plottest_severity_by_year_stacked_plots.ipynb
+++ b/Python_Code/Plottest_severity_by_year_stacked_plots.ipynb
@@ -13,7 +13,6 @@
     "\n",
     "from definitions import load_users_csv, load_caracteristics_csv, load_vehicles_csv\n",
     "\n",
-    "\n",
     "plt.rcParams.update(bundles.neurips2021(usetex=False))\n",
     "\n",
     "data_users = load_users_csv()\n",
@@ -352,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "d04e4543",
    "metadata": {},
    "outputs": [
@@ -360,6 +359,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "grav                Unscathed  Lightly Injured  Hospitalized  Killed\n",
+      "catr                                                                \n",
+      "Communal Way             3136            28100          9897     555\n",
+      "Departmental Road         562             5719          8014    1267\n",
+      "Highway                     9               33            12       6\n",
+      "National Road              73              982           856     151\n",
+      "Off Public Network         19               83            52       6\n",
+      "Other                     196             1018           602      41\n",
+      "Public Parking Lot         21              152            96       5\n",
       "grav                Unscathed  Lightly Injured  Hospitalized    Killed\n",
       "catr                                                                  \n",
       "Communal Way         0.430252         0.411429      0.148847  0.009473\n",
@@ -399,6 +407,8 @@
     "\n",
     "\n",
     "columns = ['Unscathed', 'Lightly Injured', 'Hospitalized', 'Killed']\n",
+    "\n",
+    "print(bike_res_sev)\n",
     "\n",
     "res_sev[columns] = res_sev[columns].div(res_sev[columns].sum(axis=1), axis=0)\n",
     "bike_res_sev[columns] = bike_res_sev[columns].div(bike_res_sev[columns].sum(axis=1), axis=0)\n",
